Fixed overflow problem in appointment & archives lists

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,3 +60,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* hide scrollbar without disabling scroll */
+.disable-scrollbars::-webkit-scrollbar {
+  background: transparent; /* Chrome/Safari/Webkit */
+  width: 0px;
+}
+    
+.disable-scrollbars {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
+}
